# c-linked-list

./: CMakeLists.txt
src/: CMakeLists.txt  linkedlist.c  linkedlist.h  node.c  node.h
test/: CMakeLists.txt  main.c
test/create_free/: ll_create.c  ll_free.c
test/push/: ll_push_back.c
